fixed scrollbar

--- a/public/styles/account/index.css
+++ b/public/styles/account/index.css
@@ -5,7 +5,6 @@ body{
     color: cornsilk;
     background-color: rgb(23,215,223);
     background: linear-gradient(106deg, rgba(23,215,223,1) 0%, rgba(182,54,217,1) 35%, rgba(0,53,255,1) 100%);
-    };
     width: 400px;
     height:100px;
     border-radius: 25px;
@@ -13,8 +12,8 @@ body{
     text-align: center;
     font-family: "Raleway", sans-serif;
     text-transform: uppercase;
-
 }
+
 
 /* li{
     position: relative;
@@ -47,18 +46,44 @@ a{
 h3{
     text-align: center;
 }
+
 button{
-    
-    border-radius: 25px;
-    background-image: linear-gradient(to bottom right, grey, white); 
+    box-shadow: 0px 10px 14px -7px #332773;
+    background:linear-gradient(to bottom, #d43fd4 5%, #2517e8 100%);
+    background-color:#d43fd4;
+    border-radius:8px;
+    display:inline-block;
+    cursor:pointer;
+    color: cornsilk;
+    font-family:Times New Roman;
+    font-size:20px;
+    font-weight:bold;
+    padding:13px 32px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #3e488a;
 }
+.button:hover {
+    background:linear-gradient(to bottom, #2517e8 5%, #d43fd4 100%);
+    background-color:#2517e8;
+}
+.button:active {
+    position:relative;
+    top:1px;
+}
+
+        
+button:hover{
+color: darkgray;
+}
+
 
 nav{
     background-color: rgb(23,215,223);
     background: linear-gradient(106deg, rgba(23,215,223,1) 0%, rgba(182,54,217,1) 35%, rgba(0,53,255,1) 100%);
-    };
-    color:cornsilk;
-}
+    position: relative;
+    top: 640px;
+    }
+
 
 a{
     color:cornsilk;
